--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>vue-ant</title>
-  </head>
-  <body>
-    <app></app>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>vue-ant</title>
+</head>
+<body>
+<div id="app">
+  <app></app>
+</div>
+<!-- built files will be auto injected -->
+</body>
 </html>
+
